--- a/MarsQA-1/packages.config
+++ b/MarsQA-1/packages.config
@@ -3,6 +3,7 @@
   <package id="BoDi" version="1.4.1" targetFramework="net461" />
   <package id="Cucumber.Messages" version="6.0.1" targetFramework="net461" />
   <package id="DnsClient" version="1.0.7" targetFramework="net461" />
+  <package id="Dynamitey" version="2.0.9.136" targetFramework="net461" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net461" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net461" />
   <package id="ExtentReports" version="2.41.0" targetFramework="net461" />
@@ -20,6 +21,7 @@
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="85.0.4183.8700" targetFramework="net461" />
   <package id="SpecFlow" version="3.1.86" targetFramework="net461" />
+  <package id="SpecFlow.Assist.Dynamic" version="1.4.2" targetFramework="net461" />
   <package id="SpecFlow.NUnit" version="3.1.86" targetFramework="net461" />
   <package id="SpecFlow.Tools.MsBuild.Generation" version="3.1.86" targetFramework="net461" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
